--- a/app/globals.css
+++ b/app/globals.css
@@ -2,25 +2,64 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #1d1f23;
+  --foreground-light: rgba(29, 31, 35, 0.7);
+  --w-layout: 1440px;
+  --text-size-sm: 14px;
+  --text-size-md-0: 16px;
+  --text-size-md-1: 18px;
+  --text-size-lg-0: 21px;
+  --text-size-lg-1: 24px;
+  --text-size-xxl: 48px;
+  --accent-color: #f6973f;
+  --white: #ffffff;
+  --gray-0: #fafafa;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-family: var(--font-jost-sans);
+  --second-family: var(--font-inter-sans);
+  --third-family: var(--font-nunito-sans);
+  --w-layout: var(--w-layout);
+  --foreground-light: var(--foreground-light);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --foreground-light: rgba(255, 255, 255, 0.7);
   }
-}
+} */
 
 body {
-  background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  background: var(--background);
+}
+
+h1 {
+  font-weight: 700;
+  font-size: var(--text-size-xxl);
+  line-height: 125%;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: var(--text-size-lg-0);
+  text-transform: capitalize;
+}
+
+p {
+  font-size: var(--text-size-md-1);
+  font-weight: 400;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
