--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #fafafa;
   --foreground: #1d1f23;
   --foreground-light: rgba(29, 31, 35, 0.7);
   --w-layout: 1440px;
