added variables to global.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
   --text-size-lg-1: 24px;
   --text-size-xxl: 48px;
   --accent-color: #f6973f;
+  --watermelon-color: #ef4358;
   --white: #ffffff;
   --gray-0: #fafafa;
 }
