--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
   --watermelon-color: #ef4358;
   --white: #ffffff;
   --gray-0: #fafafa;
+  --gray-2: #8d8d8d;
 }
 
 @theme inline {
@@ -51,11 +52,6 @@ h3 {
   font-weight: 600;
   font-size: var(--text-size-lg-0);
   text-transform: capitalize;
-}
-
-p {
-  font-size: var(--text-size-md-1);
-  font-weight: 400;
 }
 
 ul,
