--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --foreground: #1d1f23;
   --foreground-light: rgba(29, 31, 35, 0.7);
   --w-layout: 1440px;
+  --w-section: 1200px;
   --text-size-sm: 14px;
   --text-size-md-0: 16px;
   --text-size-md-1: 18px;
