--- a/app/globals.css
+++ b/app/globals.css
@@ -77,3 +77,10 @@ li {
   padding: 0;
   list-style: none;
 }
+
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
